--- a/web/resources/css/main.css
+++ b/web/resources/css/main.css
@@ -1,11 +1,21 @@
 @charset "UTF-8";
 
+@font-face {
+	font-family: 'MyFont';
+	src: url(/lawyersample/faces/resources/font/GenJyuuGothic-Regular.ttf);
+}
+
 * {
     margin: 0;
+    font-family: 'MyFont', sans-serif;
 }
+
+body .ui-widget:not(.pi), body .ui-widget .ui-widget:not(.pi) {
+    font-family: 'MyFont', sans-serif;
+}
+
 body {
     background-color: #f5f5f5;
-    font-family: sans-serif;
 }
 
 .ui-button.deleteBtn {
