--- a/web/resources/css/templateEach.css
+++ b/web/resources/css/templateEach.css
@@ -2,9 +2,9 @@
 
 body {
     display: grid;
-    grid-template-columns: 20px 350px 1fr 20px;
+    grid-template-columns: 20px 230px 1fr 20px;
     grid-template-rows:
-        [head] 90px
+        [head] 60px
         [main] 650px
         [foot] 80px;
     grid-row-gap: 40px;
@@ -21,9 +21,9 @@ header {
     box-shadow: 0 5px 5px rgba(0,0,0,0.4);
 }
 
-header h1 {
-    margin-top: 25px;
-    margin-left:130px;
+header h2 {
+    margin-top: 10px;
+    margin-left:110px;
 }
 
 footer {
@@ -40,7 +40,7 @@ footer {
     align-self: center;
     margin-left: 40px;
     z-index: 1;
-    width: 70px;
+    width: 50px;
 }
 
 #userIcon {
@@ -49,12 +49,41 @@ footer {
     justify-self: end;
     align-self: center;
     margin-right: 40px;
+    margin-top: 10px;
 }
 
 nav {
     grid-column: 2 / 3;
     grid-row: main / span 1;
 }
+
+body nav .ui-menu .ui-menu-list .ui-widget-header {
+    background-color: #007ad9;
+    border: 1px solid #007ad9;
+}
+
+body nav .ui-menu .ui-menu-list .ui-widget-header h3 {
+    color: #ffffff;
+}
+
+/*
+#id_munu_ul {
+    list-style-type: none;
+    padding: 0;
+}
+#id_munu_ul li a {
+    display: block;
+    padding: 0.5em 0;
+    width: 150px;
+    text-align: center;
+    background-color: #ffffff;
+    border: 1px solid #f5f5f5;
+}
+#id_munu_ul li a:hover {
+    background-color: #f5f5f5;
+}
+*/
+
 
 #container {
     grid-column: 3 / 4;
