--- a/web/resources/form/template.jrxml
+++ b/web/resources/form/template.jrxml
@@ -17,14 +17,14 @@
 			<staticText>
 				<reportElement x="201" y="20" width="152" height="38" uuid="e72ecd2f-2217-4c42-84dd-200b96ba8611"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="IPAexg" size="18"/>
+					<font fontName="Genju" size="18"/>
 				</textElement>
 				<text><![CDATA[メモ一覧]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="380" y="30" width="100" height="30" uuid="535ef718-5055-4ac4-baa6-84477fdae548"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="IPAexg"/>
+					<font fontName="Genju"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{userName}]]></textFieldExpression>
 			</textField>
@@ -44,7 +44,7 @@
 					<rightPen lineWidth="1.0"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="IPAexg" size="14"/>
+					<font fontName="Genju" size="14"/>
 				</textElement>
 				<text><![CDATA[ID]]></text>
 			</staticText>
@@ -57,7 +57,7 @@
 					<rightPen lineWidth="1.0"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="IPAexg" size="14"/>
+					<font fontName="Genju" size="14"/>
 				</textElement>
 				<text><![CDATA[メモ]]></text>
 			</staticText>
@@ -70,7 +70,7 @@
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="IPAexg" size="14"/>
+					<font fontName="Genju" size="14"/>
 				</textElement>
 				<text><![CDATA[登録日]]></text>
 			</staticText>
@@ -87,7 +87,7 @@
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="IPAexg" size="14"/>
+					<font fontName="Genju" size="14"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{id}]]></textFieldExpression>
 			</textField>
@@ -100,7 +100,7 @@
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="IPAexg" size="14"/>
+					<font fontName="Genju" size="14"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{detail}]]></textFieldExpression>
 			</textField>
@@ -113,7 +113,7 @@
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="IPAexg" size="14"/>
+					<font fontName="Genju" size="14"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{registDate}.format(java.time.format.DateTimeFormatter.ofPattern("yyyy年MM月dd日"))]]></textFieldExpression>
 			</textField>
@@ -129,14 +129,14 @@
 			<textField>
 				<reportElement x="180" y="12" width="100" height="46" uuid="f4512fa6-4574-484e-a02a-fdb9562c60eb"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font fontName="IPAexg"/>
+					<font fontName="Genju"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER} + " / "]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
 				<reportElement x="280" y="12" width="100" height="46" uuid="69a728b2-892b-4707-941c-4e994ffb54af"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font fontName="IPAexg"/>
+					<font fontName="Genju"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
