ファイルダウンロード等

--- a/web/resources/css/main.css
+++ b/web/resources/css/main.css
@@ -78,4 +78,11 @@ body {
     outline: none;
 }
 
+.ui-growl {
+    left:50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+}
+
 
