--- a/web/resources/css/b0020.css
+++ b/web/resources/css/b0020.css
@@ -3,23 +3,40 @@
 #container {
     display: grid;
     grid-template-columns: 750px 1fr;
+    grid-template-rows:
+        [container-row1]  480px
+        [container-row2]  auto;
     grid-column-gap: 20px;
     column-gap: 20px;
+    grid-row-gap: 20px;
+    row-gap: 20px;
 }
 
 #id_b0020_form {
     grid-column: 1 / 2;
+    grid-row: container-row1 / span 1;
     display: grid;
     grid-template-rows:
         [row1] 80px
-        [row2] 400px
+        [row2] 300px
         [row3] auto;
     grid-row-gap: 20px;
     row-gap: 20px;
 }
 
+#id_b0020_file_upload {
+    grid-column: 1 / 2;
+    grid-row: container-row2 / span 1;
+}
+
+#id_b0020_file_download {
+    grid-column: 2 / 3;
+    grid-row: container-row2 / span 1;
+}
+
 #id_template_btn {
     grid-column: 2 / 3;
+    grid-row: container-row1 / span 1;
     justify-self: end;
     align-self: start;
 }
