--- a/web/resources/form/template.jrxml
+++ b/web/resources/form/template.jrxml
@@ -3,6 +3,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="template" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="72e25bf4-95da-4a04-bc6a-237915bfb30d">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<parameter name="userName" class="java.lang.String"/>
+	<parameter name="reportImage" class="java.io.InputStream"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -28,6 +29,10 @@
 				</textElement>
 				<textFieldExpression><![CDATA[$P{userName}]]></textFieldExpression>
 			</textField>
+			<image>
+				<reportElement x="450" y="20" width="50" height="50" uuid="05a0ebdd-7258-47ce-bb22-908e8d75bde4"/>
+				<imageExpression><![CDATA[$P{reportImage}]]></imageExpression>
+			</image>
 		</band>
 	</title>
 	<pageHeader>
