PDFを結合して表示する

--- a/web/resources/css/templatePdf.css
+++ b/web/resources/css/templatePdf.css
@@ -1,8 +1,16 @@
 @charset "UTF-8";
 
+html {
+    height: 100%;
+}
+
+body {
+    height: 100%;
+}
 #pdfContainer {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    height: 100%;
 }
 
 #leftPdf {
